fixing the img alignment and adding book now button

--- a/css/style.css
+++ b/css/style.css
@@ -1365,7 +1365,7 @@ a {
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    padding: 1rem 4rem 5rem 4rem;
+    padding: 1rem 4rem 11rem 4rem;
 }
 
 .footer-secondary {
@@ -1679,6 +1679,31 @@ a {
     z-index: 9;
 }
 
+.fixed-btn {
+    background-color: var(--color-primary);
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    bottom: 5rem;
+    left: 0;
+    border-top: 2px solid #f5f5f5;
+    padding: 1rem;
+    justify-content: space-evenly;
+    z-index: 9;
+}
+
+.fixed-btn__link {
+    color: var(--color-body);
+    font-family: Avenir;
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.8;
+    width: 100%;
+    text-align: center;
+}
+
 @media screen and (min-width: 768px) {
     .fixed-icons {
         background: transparent;
@@ -1692,5 +1717,9 @@ a {
         align-items: center;
         justify-content: center;
         gap: 1.5rem;
+    }
+
+    .fixed-btn {
+        display: none;
     }
 }
